Added slf4j loggin and the UriUtils to encode an url