@@ -3,26 +3,25 @@ package nl.rdb.java_examples.list;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
-import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
+
+import lombok.extern.slf4j.Slf4j;
 
 import org.junit.Test;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.ValueSource;
 
+@Slf4j
 class StringBuilderSpeedTest {
 
     @ParameterizedTest
     @ValueSource(ints = { 10, 100, 1000, 10000, 50000 })
     void testSpeed_withoutBuilder(int times) {
-        String str = "";
+        StringBuilder str = new StringBuilder();
         long start = System.currentTimeMillis();
-        for (int i = 0; i < times; i++) {
-            str += "String";
-        }
+        str.append("String".repeat(Math.max(0, times)));
         long end = System.currentTimeMillis();
-        System.out.println("DEBUG: " + times + " test took " + (end - start) + " MilliSeconds");
+        log.info("DEBUG: " + times + " test took " + (end - start) + " MilliSeconds");
     }
 
     @ParameterizedTest
@@ -30,25 +29,23 @@ class StringBuilderSpeedTest {
     void testSpeed_withBuilder(int times) {
         StringBuilder sb = new StringBuilder();
         long start = System.currentTimeMillis();
-        for (int i = 0; i < times; i++) {
-            sb.append("String");
-        }
+        sb.append("String".repeat(Math.max(0, times)));
         long end = System.currentTimeMillis();
-        System.out.println("DEBUG: " + times + " test took " + (end - start) + " MilliSeconds");
+        log.info("DEBUG: " + times + " test took " + (end - start) + " MilliSeconds");
     }
 
     @Test
     void stringStreamJoining_doesNotContainComma() {
-        List<String> testList = Arrays.asList("test");
-        String test = testList.stream().collect(Collectors.joining(", "));
+        List<String> testList = List.of("test");
+        String test = String.join(", ", testList);
 
         assertFalse(test.contains(","));
     }
 
     @Test
     void stringStreamJoining_doesContainComma() {
-        List<String> testList = Arrays.asList("test", "testing");
-        String test = testList.stream().collect(Collectors.joining(", "));
+        List<String> testList = List.of("test", "testing");
+        String test = String.join(", ", testList);
 
         assertTrue(test.contains(","));
     }
